force-app/main/default/objects/Day_POE__c/Day_POE__c.object-meta.xml
<CustomObject>
    <label>Day POE</label>
    <nameField>
        <displayFormat>DAY-{0000000}</displayFormat>
        <label>Days POE Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Day POE</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>