force-app/main/default/objects/Day_POE__c/fields/Accommodation__c.field-meta.xml
<CustomField>
    <fullName>Accommodation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accommodation</label>
    <referenceTo>Accommodation__c</referenceTo>
    <relationshipLabel>Day POE</relationshipLabel>
    <relationshipName>Day_POE</relationshipName>
    <type>Lookup</type>
</CustomField>