force-app/main/default/objects/Day_POE__c/fields/Accommodation_Class__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_Class__c</fullName>
    <label>Accommodation Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>