force-app/main/default/objects/Day_POE__c/fields/departures_dates__c.field-meta.xml
<CustomField>
    <fullName>departures_dates__c</fullName>
    <label>departures dates</label>
    <referenceTo>departures_dates__c</referenceTo>
    <relationshipLabel>Day POE</relationshipLabel>
    <relationshipName>Day_POE</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>