force-app/main/default/objects/Day_POE__c/fields/Itinerary__c.field-meta.xml
<CustomField>
    <fullName>Itinerary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Itinerary</label>
    <referenceTo>Itinerary__c</referenceTo>
    <relationshipLabel>Day POE</relationshipLabel>
    <relationshipName>Day_POE</relationshipName>
    <type>Lookup</type>
</CustomField>