force-app/main/default/objects/Day_POE__c/fields/Sub_Option__c.field-meta.xml
<CustomField>
    <fullName>Sub_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Options</label>
    <referenceTo>sub_options__c</referenceTo>
    <relationshipLabel>Day POE</relationshipLabel>
    <relationshipName>Day_POE</relationshipName>
    <type>Lookup</type>
</CustomField>