force-app/main/default/objects/Day_POE__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Accommodation__c</columns>
    <columns>Accommodation_Class__c</columns>
    <columns>departures_dates__c</columns>
    <columns>Day_Number__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>